--- a/ECommerce/appsettings.json
+++ b/ECommerce/appsettings.json
@@ -8,7 +8,7 @@
   "AllowedHosts": "*",
 
   "ConnectionStrings": {
-    "DefaultConnection": "Server=(localdb)\\MSSQLLocalDB; Database=ECommerce; Trusted_Connection=true; MultipleActiveResultSets=true"
+    "DefaultConnection": "Data Source=(localdb)\\MSSQLLocalDB; Database=ECommerce; Trusted_Connection=True;"
   }
 
 
